# consultancy-ml-research-talent-estimates

./: 2026-01-28_final_results_main_orgs.csv  CLAUDE.md  README.md  final_results_comparator_non_ml.csv  requirements.txt
Nepenthe Draft/: NepenthePaper.aux  NepenthePaper.tex  (+1 more)
ml-headcount-nepenthe-main/: .gitignore  Dockerfile.test  README.md  justfile  main.py  pyproject.toml  pytest.ini
ml-headcount-nepenthe-main/.cursor/rules/: python-and-cache.mdc
ml-headcount-nepenthe-main/config/: default.yaml  test.yaml
ml-headcount-nepenthe-main/data/: affiliation_counts.csv  company_database.tsv  cv_data.tsv  validation_cvs.xlsx
ml-headcount-nepenthe-main/docs/code_description/: ARCHITECTURE.md  CV_CLASSIFICATION_DATASETS.md  DATA_FILES.md  DATA_FLOW.mmd  DATA_SOURCES_DOCUMENTATION.md  FILTER_COMPARISON.md  MODAL_DEPLOYMENT.md  MODAL_INTEGRATION.md  MODAL_QUICK_REFERENCE.md  TELEMETRY_USAGE.md
ml-headcount-nepenthe-main/examples/: blog_post_final.py  telemetry_example.py  test_schema_simple.py  test_schema_validation.py  test_single_flow.py
ml-headcount-nepenthe-main/notebooks/: ML Headcount.ipynb
ml-headcount-nepenthe-main/original-code/: 2025_08_20_all_ml_consultancy_evaluation_code.py  dawid_skene_example.py
ml-headcount-nepenthe-main/scripts/: analyze_keyword_filter_correlations.py  compare_covariance_estimation_methods.py  explore_correlation_predictors.py
ml-headcount-nepenthe-main/tests/: test_config.py  test_config_verification.py  test_confusion_matrix_analysis.py  test_hamilton_dataloaders.py  test_hamilton_processors.py  test_telemetry_integration.py
(+129 files in other folders)
