[project]
name = "ml-headcount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "ml_headcount", from = "src"}]
dependencies = [
    "accelerate>=1.10.1",
    "adjusttext>=1.3.0",
    "arviz>=0.18.0",
    "bitsandbytes>=0.47.0",
    "graphviz>=0.21",
    "hdbscan>=0.8.40",
    "ipython>=8.18.1",
    "kaleido>=1.0.0",
    "keybert>=0.9.0",
    "matplotlib>=3.9.4",
    "modal>=1.1.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandera>=0.26.1",
    "plotly>=6.3.0",
    "pymc>=5.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "sf-hamilton[pandera,ui,sdk]>=1.88.0",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "wordcloud>=1.9.4",
]

[build-system]
requires = ["uv_build<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]

[tool.uv.sources]
ml-headcount = { path = ".", editable = true }
